feat: Integrate UI4 branch with API path normalization and ACA config preservation