@@ -1,13 +1,28 @@
 package com.aivle0102.bigproject.service;
 
+import com.aivle0102.bigproject.domain.Influencer;
+import com.aivle0102.bigproject.domain.MarketReport;
 import com.aivle0102.bigproject.domain.Recipe;
+import com.aivle0102.bigproject.domain.RecipeAllergen;
+import com.aivle0102.bigproject.domain.RecipeIngredient;
 import com.aivle0102.bigproject.domain.UserInfo;
+import com.aivle0102.bigproject.domain.ConsumerFeedback;
+import com.aivle0102.bigproject.dto.AllergenAnalysisResponse;
+import com.aivle0102.bigproject.dto.AgeGroupResult;
+import com.aivle0102.bigproject.dto.IngredientEvidence;
 import com.aivle0102.bigproject.dto.RecipeCreateRequest;
 import com.aivle0102.bigproject.dto.RecipePublishRequest;
 import com.aivle0102.bigproject.dto.RecipeResponse;
 import com.aivle0102.bigproject.dto.ReportRequest;
+import com.aivle0102.bigproject.domain.VirtualConsumer;
+import com.aivle0102.bigproject.repository.InfluencerRepository;
+import com.aivle0102.bigproject.repository.MarketReportRepository;
+import com.aivle0102.bigproject.repository.RecipeAllergenRepository;
+import com.aivle0102.bigproject.repository.RecipeIngredientRepository;
 import com.aivle0102.bigproject.repository.RecipeRepository;
 import com.aivle0102.bigproject.repository.UserInfoRepository;
+import com.aivle0102.bigproject.repository.ConsumerFeedbackRepository;
+import com.aivle0102.bigproject.repository.VirtualConsumerRepository;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
@@ -16,92 +31,178 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.Collections;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class RecipeService {
 
+    private static final String STATUS_DRAFT = "DRAFT";
+    private static final String STATUS_PUBLISHED = "PUBLISHED";
+    private static final String REPORT_TYPE_AI = "AI";
+    private static final String ANALYSIS_REF_DIRECT = "DIRECT_MATCH";
+    private static final List<String> VIRTUAL_CONSUMER_COUNTRIES = List.of(
+            "미국", "한국", "일본", "중국", "영국", "프랑스", "독일", "캐나다", "호주", "인도"
+    );
+
     private final RecipeRepository recipeRepository;
+    private final RecipeIngredientRepository recipeIngredientRepository;
+    private final MarketReportRepository marketReportRepository;
+    private final RecipeAllergenRepository recipeAllergenRepository;
+    private final InfluencerRepository influencerRepository;
     private final UserInfoRepository userInfoRepository;
     private final AiReportService aiReportService;
+    private final AllergenAnalysisService allergenAnalysisService;
+    private final PersonaService personaService;
+    private final VirtualConsumerRepository virtualConsumerRepository;
+    private final ConsumerFeedbackRepository consumerFeedbackRepository;
+    private final EvaluationService evaluationService;
     private final ObjectMapper objectMapper = new ObjectMapper();
 
     @Transactional
     public RecipeResponse create(String authorId, RecipeCreateRequest request) {
-        String authorName = userInfoRepository.findByUserIdAndUserState(authorId, "1")
-                .map(UserInfo::getUserName)
-                .orElse(authorId);
+        String authorName = resolveUserName(authorId);
+        String rawTargetCountry = defaultIfBlank(request.getTargetCountry(), "US");
+        String normalizedTargetCountry = normalizeCountryCode(rawTargetCountry);
 
-        ReportRequest reportRequest = new ReportRequest();
-        reportRequest.setRecipe(buildReportRecipe(request));
-        reportRequest.setTargetCountry(defaultIfBlank(request.getTargetCountry(), "미국"));
-        reportRequest.setTargetPersona(defaultIfBlank(request.getTargetPersona(), "20~30대 바쁜 직장인"));
-        reportRequest.setPriceRange(defaultIfBlank(request.getPriceRange(), "USD 6~9"));
+        ReportRequest reportRequest = buildReportRequest(
+                request,
+                request.getIngredients(),
+                request.getSteps(),
+                rawTargetCountry
+        );
 
         String reportJson;
         String summary;
+        AllergenAnalysisResponse allergenResponse;
         try {
             var report = aiReportService.generateReport(reportRequest);
             reportJson = writeJsonMap(report);
             summary = aiReportService.generateSummary(reportJson);
+            allergenResponse = allergenAnalysisService.analyzeIngredients(request.getIngredients(), normalizedTargetCountry);
         } catch (Exception e) {
             throw new IllegalStateException("Failed to generate report for recipe", e);
         }
 
         Recipe recipe = Recipe.builder()
-                .title(request.getTitle())
+                .recipeName(request.getTitle())
                 .description(request.getDescription())
-                .ingredientsJson(writeJson(request.getIngredients()))
-                .stepsJson(writeJson(request.getSteps()))
-                .reportJson(reportJson)
-                .summary(summary)
                 .imageBase64(request.getImageBase64())
-                .status("PUBLISHED")
-                .authorId(authorId)
-                .authorName(authorName)
+                .steps(joinSteps(request.getSteps()))
+                .status(request.isDraft() ? STATUS_DRAFT : STATUS_PUBLISHED)
+                .userId(authorId)
+                .targetCountry(rawTargetCountry)
                 .createdAt(LocalDateTime.now())
+                .updatedAt(LocalDateTime.now())
                 .build();
 
         Recipe saved = recipeRepository.save(recipe);
-        return toResponse(saved);
+
+        List<RecipeIngredient> ingredients = saveIngredients(saved, request.getIngredients());
+        MarketReport marketReport = marketReportRepository.save(MarketReport.builder()
+                .recipe(saved)
+                .reportType(REPORT_TYPE_AI)
+                .content(reportJson)
+                .summary(summary)
+                .build());
+
+        saveAllergens(saved, ingredients, allergenResponse);
+        List<VirtualConsumer> consumers = saveVirtualConsumers(marketReport, reportRequest.getRecipe(), summary, reportJson);
+        evaluationService.evaluateAndSave(marketReport, consumers, reportJson);
+
+        return toResponse(saved, ingredients, marketReport, authorName);
     }
 
     @Transactional
     public RecipeResponse update(Long id, String authorId, RecipeCreateRequest request) {
         Recipe recipe = recipeRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Recipe not found"));
-        if (!recipe.getAuthorId().equals(authorId)) {
+        if (!recipe.getUserId().equals(authorId)) {
             throw new IllegalArgumentException("Recipe not found");
         }
 
-        recipe.setTitle(request.getTitle());
+        boolean ingredientsChanged = request.getIngredients() != null;
+
+        recipe.setRecipeName(request.getTitle());
         recipe.setDescription(request.getDescription());
-        recipe.setIngredientsJson(writeJson(request.getIngredients()));
-        recipe.setStepsJson(writeJson(request.getSteps()));
         recipe.setImageBase64(request.getImageBase64());
+        recipe.setSteps(joinSteps(request.getSteps()));
+        String rawTargetCountry = defaultIfBlank(request.getTargetCountry(), recipe.getTargetCountry());
+        String normalizedTargetCountry = normalizeCountryCode(rawTargetCountry);
+        recipe.setTargetCountry(rawTargetCountry);
+        recipe.setUpdatedAt(LocalDateTime.now());
+
+        Recipe saved = recipeRepository.save(recipe);
+
+        List<RecipeIngredient> ingredients;
+        List<String> ingredientsForAnalysis;
+        if (ingredientsChanged) {
+            // Delete existing allergen rows before removing ingredients to avoid dangling references.
+            recipeAllergenRepository.deleteByRecipe_Id(saved.getId());
+            ingredients = replaceIngredients(saved, request.getIngredients());
+            ingredientsForAnalysis = request.getIngredients();
+        } else {
+            ingredients = recipeIngredientRepository.findByRecipe_IdOrderByIdAsc(saved.getId());
+            ingredientsForAnalysis = ingredients.stream().map(RecipeIngredient::getIngredientName).toList();
+        }
+        String targetCountry = rawTargetCountry;
+
         if (request.isRegenerateReport()) {
-            ReportRequest reportRequest = new ReportRequest();
-            reportRequest.setRecipe(buildReportRecipe(request));
-            reportRequest.setTargetCountry(defaultIfBlank(request.getTargetCountry(), "미국"));
-            reportRequest.setTargetPersona(defaultIfBlank(request.getTargetPersona(), "20~30대 바쁜 직장인"));
-            reportRequest.setPriceRange(defaultIfBlank(request.getPriceRange(), "USD 6~9"));
+            List<String> stepsForAnalysis = request.getSteps() != null ? request.getSteps() : splitSteps(recipe.getSteps());
+            ReportRequest reportRequest = buildReportRequest(
+                    request,
+                    ingredientsForAnalysis,
+                    stepsForAnalysis,
+                    targetCountry
+            );
+            String reportJson;
+            String summary;
             try {
                 var report = aiReportService.generateReport(reportRequest);
-                recipe.setReportJson(writeJsonMap(report));
-                recipe.setSummary(aiReportService.generateSummary(recipe.getReportJson()));
+                reportJson = writeJsonMap(report);
+                summary = aiReportService.generateSummary(reportJson);
             } catch (Exception e) {
                 throw new IllegalStateException("Failed to generate report for recipe", e);
             }
+
+            MarketReport marketReport = marketReportRepository.findTopByRecipe_IdOrderByCreatedAtDesc(saved.getId())
+                    .orElseGet(() -> MarketReport.builder().recipe(saved).reportType(REPORT_TYPE_AI).build());
+            marketReport.setContent(reportJson);
+            marketReport.setSummary(summary);
+            marketReportRepository.save(marketReport);
+            if (marketReport.getId() != null) {
+                influencerRepository.deleteByReport_Id(marketReport.getId());
+                consumerFeedbackRepository.deleteByReport_Id(marketReport.getId());
+                virtualConsumerRepository.deleteByReport_Id(marketReport.getId());
+            }
+            List<VirtualConsumer> consumers = saveVirtualConsumers(marketReport, reportRequest.getRecipe(), summary, reportJson);
+            evaluationService.evaluateAndSave(marketReport, consumers, reportJson);
         }
 
-        Recipe saved = recipeRepository.save(recipe);
-        return toResponse(saved);
+        if (ingredientsChanged) {
+            AllergenAnalysisResponse allergenResponse = allergenAnalysisService.analyzeIngredients(
+                    ingredientsForAnalysis,
+                    normalizedTargetCountry
+            );
+            saveAllergens(saved, ingredients, allergenResponse);
+        }
+
+        String authorName = resolveUserName(authorId);
+        MarketReport latestReport = marketReportRepository.findTopByRecipe_IdOrderByCreatedAtDesc(saved.getId()).orElse(null);
+        return toResponse(saved, ingredients, latestReport, authorName);
     }
 
     @Transactional(readOnly = true)
     public List<RecipeResponse> getAll() {
-        return recipeRepository.findByStatusOrderByCreatedAtDesc("PUBLISHED")
+        return recipeRepository.findByStatusOrderByCreatedAtDesc(STATUS_PUBLISHED)
                 .stream()
                 .map(this::toResponse)
                 .toList();
@@ -109,7 +210,7 @@ public class RecipeService {
 
     @Transactional(readOnly = true)
     public List<RecipeResponse> getByAuthor(String authorId) {
-        return recipeRepository.findByAuthorIdAndStatusOrderByCreatedAtDesc(authorId, "PUBLISHED")
+        return recipeRepository.findByUserIdAndStatusOrderByCreatedAtDesc(authorId, STATUS_PUBLISHED)
                 .stream()
                 .map(this::toResponse)
                 .toList();
@@ -119,8 +220,8 @@ public class RecipeService {
     public RecipeResponse getOne(Long id, String requesterId) {
         Recipe recipe = recipeRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Recipe not found"));
-        if ("DRAFT".equalsIgnoreCase(recipe.getStatus())
-                && (requesterId == null || !requesterId.equals(recipe.getAuthorId()))) {
+        if (STATUS_DRAFT.equalsIgnoreCase(recipe.getStatus())
+                && (requesterId == null || !requesterId.equals(recipe.getUserId()))) {
             throw new IllegalArgumentException("Recipe not found");
         }
         return toResponse(recipe);
@@ -130,18 +231,36 @@ public class RecipeService {
     public RecipeResponse publish(Long id, String requesterId, RecipePublishRequest request) {
         Recipe recipe = recipeRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Recipe not found"));
-        if (!recipe.getAuthorId().equals(requesterId)) {
+        if (!recipe.getUserId().equals(requesterId)) {
             throw new IllegalArgumentException("Recipe not found");
         }
+
         if (request != null) {
-            if (request.getInfluencers() != null) {
-                recipe.setInfluencerJson(writeJsonMapList(request.getInfluencers()));
+            MarketReport latestReport = marketReportRepository.findTopByRecipe_IdOrderByCreatedAtDesc(recipe.getId()).orElse(null);
+            Long reportId = latestReport == null ? null : latestReport.getId();
+            if (reportId != null) {
+                influencerRepository.deleteByReport_Id(reportId);
             }
-            if (request.getInfluencerImageBase64() != null) {
-                recipe.setInfluencerImageBase64(request.getInfluencerImageBase64());
+
+            if (request.getInfluencers() != null && !request.getInfluencers().isEmpty()) {
+                MarketReport reportRef = latestReport;
+                for (Map<String, Object> influencer : request.getInfluencers()) {
+                    influencerRepository.save(Influencer.builder()
+                            .report(reportRef)
+                            .influencerInfo(writeJsonMap(influencer))
+                            .influencerImage(request.getInfluencerImageBase64())
+                            .build());
+                }
+            } else if (request.getInfluencerImageBase64() != null && reportId != null) {
+                influencerRepository.save(Influencer.builder()
+                        .report(latestReport)
+                        .influencerImage(request.getInfluencerImageBase64())
+                        .build());
             }
         }
-        recipe.setStatus("PUBLISHED");
+
+        recipe.setStatus(STATUS_PUBLISHED);
+        recipe.setUpdatedAt(LocalDateTime.now());
         Recipe saved = recipeRepository.save(recipe);
         return toResponse(saved);
     }
@@ -150,56 +269,354 @@ public class RecipeService {
     public void delete(Long id, String requesterId) {
         Recipe recipe = recipeRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Recipe not found"));
-        if (!recipe.getAuthorId().equals(requesterId)) {
+        if (!recipe.getUserId().equals(requesterId)) {
             throw new IllegalArgumentException("Recipe not found");
         }
+        // Delete child rows in FK-safe order to avoid constraint violations.
+        recipeAllergenRepository.deleteByRecipe_Id(id);
+        recipeIngredientRepository.deleteByRecipe_Id(id);
+
+        List<MarketReport> reports = marketReportRepository.findByRecipe_IdOrderByCreatedAtDesc(id);
+        for (MarketReport report : reports) {
+            if (report.getId() != null) {
+                influencerRepository.deleteByReport_Id(report.getId());
+            }
+        }
+        marketReportRepository.deleteAll(reports);
         recipeRepository.delete(recipe);
     }
 
     private RecipeResponse toResponse(Recipe recipe) {
+        List<RecipeIngredient> ingredients = recipeIngredientRepository.findByRecipe_IdOrderByIdAsc(recipe.getId());
+        MarketReport latestReport = marketReportRepository.findTopByRecipe_IdOrderByCreatedAtDesc(recipe.getId()).orElse(null);
+        String authorName = resolveUserName(recipe.getUserId());
+        return toResponse(recipe, ingredients, latestReport, authorName);
+    }
+
+    private RecipeResponse toResponse(Recipe recipe, List<RecipeIngredient> ingredients, MarketReport report, String authorName) {
+        List<String> ingredientNames = ingredients == null ? List.of()
+                : ingredients.stream().map(RecipeIngredient::getIngredientName).toList();
+        Map<String, Object> reportMap = report == null ? Collections.emptyMap() : readJsonMap(report.getContent());
+        if (report != null) {
+            reportMap.put("evaluationResults", readEvaluationResults(report));
+        }
+        Map<String, Object> allergenMap = buildAllergenResponse(recipe);
+        List<Map<String, Object>> influencers = readInfluencers(report);
+        String influencerImage = influencers.isEmpty() ? null : readInfluencerImage(report);
+        if (STATUS_DRAFT.equalsIgnoreCase(recipe.getStatus())) {
+            influencers = List.of();
+            influencerImage = null;
+        }
+
         return new RecipeResponse(
                 recipe.getId(),
-                recipe.getTitle(),
+                recipe.getRecipeName(),
                 recipe.getDescription(),
-                readJson(recipe.getIngredientsJson()),
-                readJson(recipe.getStepsJson()),
+                ingredientNames,
+                splitSteps(recipe.getSteps()),
                 recipe.getImageBase64(),
-                readJsonMap(recipe.getReportJson()),
-                recipe.getSummary(),
-                readJsonMapList(recipe.getInfluencerJson()),
-                recipe.getInfluencerImageBase64(),
+                reportMap,
+                allergenMap,
+                report == null ? null : report.getSummary(),
+                influencers,
+                influencerImage,
                 recipe.getStatus(),
-                recipe.getAuthorId(),
-                recipe.getAuthorName(),
-                recipe.getCreatedAt());
+                recipe.getUserId(),
+                authorName,
+                recipe.getCreatedAt()
+        );
     }
 
-    private String writeJson(List<String> values) {
+    private String readInfluencerImage(MarketReport report) {
+        if (report == null) return null;
+        return influencerRepository.findByReport_IdOrderByIdAsc(report.getId())
+                .stream()
+                .map(Influencer::getInfluencerImage)
+                .filter(v -> v != null && !v.isBlank())
+                .findFirst()
+                .orElse(null);
+    }
+
+    private List<Map<String, Object>> readInfluencers(MarketReport report) {
+        if (report == null) return List.of();
+        return influencerRepository.findByReport_IdOrderByIdAsc(report.getId())
+                .stream()
+                .map(Influencer::getInfluencerInfo)
+                .filter(v -> v != null && !v.isBlank())
+                .map(this::readJsonMap)
+                .toList();
+    }
+
+    private Map<String, Object> buildAllergenResponse(Recipe recipe) {
+        String targetCountry = normalizeCountryCode(recipe.getTargetCountry());
+        List<RecipeAllergen> items = (targetCountry == null || targetCountry.isBlank())
+                ? recipeAllergenRepository.findByRecipe_IdOrderByIdAsc(recipe.getId())
+                : recipeAllergenRepository.findByRecipe_IdAndTargetCountryOrderByIdAsc(recipe.getId(), targetCountry);
+
+        Set<String> matched = items.stream()
+                .map(RecipeAllergen::getMatchedAllergen)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+
+        Map<String, Set<String>> ingredientToAllergens = new LinkedHashMap<>();
+        boolean usedHaccp = false;
+        boolean usedAi = false;
+        for (RecipeAllergen item : items) {
+            if (item.getIngredient() == null || item.getIngredient().getIngredientName() == null) {
+                continue;
+            }
+            String ingredient = item.getIngredient().getIngredientName();
+            ingredientToAllergens
+                    .computeIfAbsent(ingredient, k -> new LinkedHashSet<>())
+                    .add(item.getMatchedAllergen());
+            String analysisRef = item.getAnalysisRef();
+            if (analysisRef != null) {
+                if (analysisRef.contains("HACCP")) usedHaccp = true;
+                if (analysisRef.contains("AI_AGENT_USED") || analysisRef.startsWith("AI_")) usedAi = true;
+            }
+        }
+
+        Map<String, Object> out = new LinkedHashMap<>();
+        out.put("matchedAllergens", matched);
+        out.put("note", allergenAnalysisService.buildAllergenNoteFromDetected(
+                targetCountry,
+                ingredientToAllergens,
+                usedHaccp,
+                usedAi
+        ));
+        return out;
+    }
+
+    private ReportRequest buildReportRequest(
+            RecipeCreateRequest request,
+            List<String> ingredients,
+            List<String> steps,
+            String targetCountry
+    ) {
+        ReportRequest reportRequest = new ReportRequest();
+        reportRequest.setRecipe(buildReportRecipe(request, ingredients, steps));
+        reportRequest.setTargetCountry(defaultIfBlank(targetCountry, "US"));
+        reportRequest.setTargetPersona(defaultIfBlank(request.getTargetPersona(), "20~30s office workers"));
+        reportRequest.setPriceRange(defaultIfBlank(request.getPriceRange(), "USD 6~9"));
+        return reportRequest;
+    }
+
+    private String buildReportRecipe(RecipeCreateRequest request, List<String> ingredients, List<String> steps) {
+        String ingredientsText = ingredients == null ? "" : String.join(", ", ingredients);
+        String stepsText = steps == null ? "" : String.join("\n", steps);
+        return String.format(
+                "%s\n%s\n재료: %s\n조리 순서:\n%s",
+                defaultIfBlank(request.getTitle(), ""),
+                defaultIfBlank(request.getDescription(), ""),
+                ingredientsText,
+                stepsText
+        );
+    }
+
+    private List<RecipeIngredient> saveIngredients(Recipe recipe, List<String> ingredients) {
+        if (ingredients == null || ingredients.isEmpty()) {
+            return List.of();
+        }
+        List<RecipeIngredient> rows = ingredients.stream()
+                .filter(v -> v != null && !v.isBlank())
+                .map(name -> RecipeIngredient.builder()
+                        .recipe(recipe)
+                        .ingredientName(name.trim())
+                        .build())
+                .toList();
+        return recipeIngredientRepository.saveAll(rows);
+    }
+
+    private List<RecipeIngredient> replaceIngredients(Recipe recipe, List<String> ingredients) {
+        recipeIngredientRepository.deleteByRecipe_Id(recipe.getId());
+        return saveIngredients(recipe, ingredients);
+    }
+
+    private List<VirtualConsumer> saveVirtualConsumers(MarketReport report, String recipeText, String summary, String reportJson) {
+        if (report == null || report.getId() == null) {
+            return List.of();
+        }
+        // Ensure unique constraint (report_id, personaName, country, ageGroup) doesn't collide
+        virtualConsumerRepository.deleteByReport_Id(report.getId());
+        if (recipeText == null || recipeText.isBlank()) {
+            return List.of();
+        }
+        String personaSource = (summary != null && !summary.isBlank()) ? summary : reportJson;
+        if (personaSource == null || personaSource.isBlank()) {
+            return List.of();
+        }
         try {
-            return objectMapper.writeValueAsString(values == null ? Collections.emptyList() : values);
+            List<AgeGroupResult> targets = personaService.selectTopAgeGroups(recipeText, VIRTUAL_CONSUMER_COUNTRIES);
+            if (targets == null || targets.isEmpty()) {
+                return List.of();
+            }
+            List<VirtualConsumer> personas = personaService.generatePersonas(personaSource, targets);
+            if (personas == null || personas.isEmpty()) {
+                return List.of();
+            }
+            Map<String, String> reasonByKey = new HashMap<>();
+            for (AgeGroupResult target : targets) {
+                String key = personaKey(target.getCountry(), target.getAgeGroup());
+                reasonByKey.putIfAbsent(key, target.getReason());
+            }
+            List<VirtualConsumer> rows = new ArrayList<>();
+            for (VirtualConsumer persona : personas) {
+                if (persona == null) {
+                    continue;
+                }
+                String key = personaKey(persona.getCountry(), persona.getAgeGroup());
+                String reason = reasonByKey.getOrDefault(key, "");
+                rows.add(VirtualConsumer.builder()
+                        .report(report)
+                        .personaName(defaultIfBlank(persona.getPersonaName(), ""))
+                        .country(defaultIfBlank(persona.getCountry(), ""))
+                        .ageGroup(defaultIfBlank(persona.getAgeGroup(), ""))
+                        .reason(defaultIfBlank(reason, ""))
+                        .lifestyle(persona.getLifestyle())
+                        .foodPreference(defaultIfBlank(persona.getFoodPreference(), ""))
+                        .purchaseCriteria(persona.getPurchaseCriteria())
+                        .attitudeToKFood(persona.getAttitudeToKFood())
+                        .evaluationPerspective(persona.getEvaluationPerspective())
+                        .build());
+            }
+            if (!rows.isEmpty()) {
+                return virtualConsumerRepository.saveAll(rows);
+            }
         } catch (Exception e) {
-            throw new IllegalStateException("Failed to serialize recipe data", e);
+            System.err.println("Failed to save virtual consumers for report " + report.getId() + ": " + e.getMessage());
+        }
+        return List.of();
+    }
+
+    private String personaKey(String country, String ageGroup) {
+        return String.format("%s|%s", country == null ? "" : country.trim(), ageGroup == null ? "" : ageGroup.trim());
+    }
+
+    private List<Map<String, Object>> readEvaluationResults(MarketReport report) {
+        if (report == null || report.getId() == null) {
+            return List.of();
+        }
+        List<ConsumerFeedback> feedbacks = consumerFeedbackRepository.findByReport_IdOrderByIdAsc(report.getId());
+        if (feedbacks == null || feedbacks.isEmpty()) {
+            return List.of();
+        }
+        Map<String, FeedbackAggregate> aggregates = new LinkedHashMap<>();
+        for (ConsumerFeedback feedback : feedbacks) {
+            String country = feedback.getCountry();
+            if (country == null || country.isBlank()) {
+                continue;
+            }
+            FeedbackAggregate agg = aggregates.computeIfAbsent(country, k -> new FeedbackAggregate());
+            if (feedback.getTotalScore() != null) {
+                agg.totalScoreSum += feedback.getTotalScore();
+                agg.totalScoreCount += 1;
+            }
+            if (agg.feedbacks.size() < 10) {
+                Map<String, Object> item = new LinkedHashMap<>();
+                item.put("personaName", feedback.getPersonaName());
+                item.put("positiveFeedback", feedback.getPositiveFeedback());
+                item.put("negativeFeedback", feedback.getNegativeFeedback());
+                agg.feedbacks.add(item);
+            }
+        }
+        return aggregates.entrySet().stream()
+                .map(entry -> {
+                    FeedbackAggregate agg = entry.getValue();
+                    int avgScore = agg.totalScoreCount == 0 ? 0
+                            : (int) Math.round((double) agg.totalScoreSum / agg.totalScoreCount);
+                    return Map.<String, Object>of(
+                            "country", entry.getKey(),
+                            "totalScore", avgScore,
+                            "feedbacks", agg.feedbacks
+                    );
+                })
+                .toList();
+    }
+
+    private static final class FeedbackAggregate {
+        private int totalScoreSum;
+        private int totalScoreCount;
+        private final List<Map<String, Object>> feedbacks = new ArrayList<>();
+    }
+
+    private void saveAllergens(Recipe recipe, List<RecipeIngredient> ingredients, AllergenAnalysisResponse allergenResponse) {
+        if (allergenResponse == null || ingredients == null || ingredients.isEmpty()) {
+            return;
+        }
+
+        Map<String, RecipeIngredient> byName = ingredients.stream()
+                .collect(Collectors.toMap(
+                        v -> normalizeIngredientKey(v.getIngredientName()),
+                        v -> v,
+                        (a, b) -> a,
+                        LinkedHashMap::new
+                ));
+
+        Map<String, Map<String, String>> ingredientToAllergens = new LinkedHashMap<>();
+
+        if (allergenResponse.getDirectMatchedAllergens() != null) {
+            for (Map.Entry<String, String> entry : allergenResponse.getDirectMatchedAllergens().entrySet()) {
+                String allergen = entry.getKey();
+                String ingredientsText = entry.getValue();
+                if (ingredientsText == null) continue;
+                for (String token : ingredientsText.split(",")) {
+                    String name = token.trim();
+                    if (name.isEmpty()) continue;
+                    ingredientToAllergens
+                            .computeIfAbsent(name, k -> new LinkedHashMap<>())
+                            .putIfAbsent(allergen, ANALYSIS_REF_DIRECT);
+                }
+            }
+        }
+
+        if (allergenResponse.getHaccpSearchEvidences() != null) {
+            for (IngredientEvidence ev : allergenResponse.getHaccpSearchEvidences()) {
+                if (ev.getMatchedAllergensForTargetCountry() == null || ev.getMatchedAllergensForTargetCountry().isEmpty()) {
+                    continue;
+                }
+                Map<String, String> mapped = ingredientToAllergens
+                        .computeIfAbsent(ev.getIngredient(), k -> new LinkedHashMap<>());
+                for (String allergen : ev.getMatchedAllergensForTargetCountry()) {
+                    mapped.putIfAbsent(allergen, ev.getSearchStrategy());
+                }
+            }
+        }
+
+        String targetCountry = allergenResponse.getTargetCountry();
+        for (Map.Entry<String, Map<String, String>> entry : ingredientToAllergens.entrySet()) {
+            RecipeIngredient ingredient = byName.get(normalizeIngredientKey(entry.getKey()));
+            if (ingredient == null) {
+                continue;
+            }
+            for (Map.Entry<String, String> allergenEntry : entry.getValue().entrySet()) {
+                recipeAllergenRepository.save(RecipeAllergen.builder()
+                        .recipe(recipe)
+                        .ingredient(ingredient)
+                        .targetCountry(targetCountry)
+                        .matchedAllergen(allergenEntry.getKey())
+                        .analysisRef(allergenEntry.getValue())
+                        .build());
+            }
         }
     }
 
-    private String writeJsonMapList(List<java.util.Map<String, Object>> value) {
-        try {
-            return objectMapper.writeValueAsString(value == null ? Collections.emptyList() : value);
-        } catch (Exception e) {
-            throw new IllegalStateException("Failed to serialize influencer data", e);
-        }
+    private String normalizeIngredientKey(String name) {
+        return name == null ? "" : name.trim().toLowerCase();
     }
 
-    private List<String> readJson(String value) {
-        if (value == null || value.isBlank()) {
-            return Collections.emptyList();
+    private String joinSteps(List<String> steps) {
+        if (steps == null || steps.isEmpty()) {
+            return null;
         }
-        try {
-            return objectMapper.readValue(value, new TypeReference<>() {
-            });
-        } catch (Exception e) {
-            return Collections.emptyList();
+        return steps.stream()
+                .filter(v -> v != null && !v.isBlank())
+                .collect(Collectors.joining("\n"));
+    }
+
+    private List<String> splitSteps(String steps) {
+        if (steps == null || steps.isBlank()) {
+            return List.of();
         }
+        return List.of(steps.split("\\n"));
     }
 
     private String writeJsonMap(Object value) {
@@ -210,39 +627,15 @@ public class RecipeService {
         }
     }
 
-    private List<java.util.Map<String, Object>> readJsonMapList(String value) {
-        if (value == null || value.isBlank()) {
-            return Collections.emptyList();
-        }
-        try {
-            return objectMapper.readValue(value, new TypeReference<>() {
-            });
-        } catch (Exception e) {
-            return Collections.emptyList();
-        }
-    }
-
-    private java.util.Map<String, Object> readJsonMap(String value) {
+    private Map<String, Object> readJsonMap(String value) {
         if (value == null || value.isBlank()) {
             return Collections.emptyMap();
         }
         try {
-            return objectMapper.readValue(value, new TypeReference<>() {
-            });
+            return objectMapper.readValue(value, new TypeReference<>() {});
         } catch (Exception e) {
             return Collections.emptyMap();
         }
-    }
-
-    private String buildReportRecipe(RecipeCreateRequest request) {
-        String ingredientsText = request.getIngredients() == null ? "" : String.join(", ", request.getIngredients());
-        String stepsText = request.getSteps() == null ? "" : String.join("\n", request.getSteps());
-        return String.format(
-                "%s\n%s\n재료: %s\n조리 단계:\n%s",
-                defaultIfBlank(request.getTitle(), ""),
-                defaultIfBlank(request.getDescription(), ""),
-                ingredientsText,
-                stepsText);
     }
 
     private String defaultIfBlank(String value, String fallback) {
@@ -250,5 +643,37 @@ public class RecipeService {
             return fallback;
         }
         return value;
+    }
+
+    private String normalizeCountryCode(String raw) {
+        if (raw == null || raw.isBlank()) {
+            return "";
+        }
+        String trimmed = raw.trim();
+        String upper = trimmed.toUpperCase();
+        switch (upper) {
+            case "US", "JP", "CN", "FR", "DE", "PL", "IN", "VN", "TH":
+                return upper;
+            default:
+                break;
+        }
+        return switch (trimmed) {
+            case "미국" -> "US";
+            case "일본" -> "JP";
+            case "중국" -> "CN";
+            case "프랑스" -> "FR";
+            case "독일" -> "DE";
+            case "폴란드" -> "PL";
+            case "인도" -> "IN";
+            case "베트남" -> "VN";
+            case "태국" -> "TH";
+            default -> upper;
+        };
+    }
+
+    private String resolveUserName(String userId) {
+        return userInfoRepository.findByUserId(userId)
+                .map(UserInfo::getUserName)
+                .orElse(userId);
     }
 }
